petapps/petapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
#  namespace: fb-test
  labels:
    app: spring-petclinic
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-petclinic
      version: v1
  template:
    metadata:
      labels:
        app: spring-petclinic
        version: v1
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: spring-petclinic
#        image: 172.30.1.1:5000/demo/spring-petclinic:latest
        image: quay.io/service-binding/spring-petclinic:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: petapps-route-dev
  namespace: istio-system
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: petapps-route-dev-istio-system.apps-crc.testing
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
