petapps/vs-petclinic.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-petclinic
spec:
  hosts:
    - 'spring-petclinic.fbdev.svc.cluster.local'
  gateways:
    - my-gateway
  http:
    - route:
        - destination:
            host: spring-petclinic
            port:
              number: 8080
